# soccer-scraper

./: .gitignore  README.md  main.py  pyproject.toml
src/pre_processor/: config.py  main.py  processors.py  utils.py
src/scraper/: config.py  exceptions.py  main.py  network.py  parsers.py  utils.py
