[project]
name = "soccer-scraper"
version = "0.1.0"
description = "Scrapping results and attendance data for multiple soccer matches from different leagues."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
]